added .env files for sqlite3 and postgresql

--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
-db_name = goevent
-db_user = goevent
-db_pass = goevent
-db_type = postgres
-db_host = nuc
-db_port = 5432
+cloudconfigenabled = false
+db_name = goevent.db
+db_type = sqlite3
