added realm data for basic auth

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 cloudconfigenabled = false
 db_name = goevent.db
 db_type = sqlite3
+realm = goservice
+realm_user = $2a$04$mMVvABhZBkK5S0.jdLPWNe4NGf2/qdZqO.4GuhZ6eaSmQvD2SDgb2
+realm_secret = $2a$04$mRq8VuvHjI1vyOvTGu9yJOrgJ444Gj5hcr6057q3NQZH5cyl.Kw9O
